--- a/index.html
+++ b/index.html
@@ -8,25 +8,41 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<title>列表页</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
+	<script type="text/javascript" src="js/zepto.min.js"></script>
+	<script type="text/javascript">
+		$(function(){
+			var UA=window.navigator.userAgent;
+			var Click="click";
+			if(/ipad|iphone|android/.test(UA)){
+				Click="tap";
+			}
+			$("#navTab li")[Click](function(){
+				$(this).addClass("act").siblings().removeClass("act");
+				var index=$("#navTab li").index(this);
+				$(".wrapper>div.list-wrapper").eq(index).show().siblings().hide();
+			})
+		})
+	</script>
 </head>
 <body>
 	<div class="viewport">
 		<header class="header clear">
 			<div class="user left">
-				<a href="javascript:;" class="user-name">向日葵</a>
+				<a href="javascript:;" class="user-name" id="username">向日葵</a>
 			</div>
 			<div class="edit right">
 				<a href="javascript:;" class="edit-s">编辑</a>
 			</div>
 		</header>
 		<div class="content">
-			<ul class="content-nav clear">
+			<ul class="content-nav clear" id="navTab">
 				<li class="act"><a href="javascript:;">已发布链接</a><span>170</span></li>
 				<li><a href="javascript:;">草稿箱</a><span>8</span></li>
 				<li><a href="javascript:;">断货通知</a><span>+2</span></li>
 			</ul>
 			<div style="clear:both"></div>
-			<div class="list-wrapper">
+			<div class="wrapper">
+			<div class="list-wrapper" style="display:block">
 				<div class="list">
 					<div class="list-main clear">
 						<div class="img-view left"><img src="images/list-3.jpg" alt=""></div>
@@ -36,7 +52,7 @@
 								<span class="time right">2:02pm</span>
 							</div>
 							<div class="name">为什么要做面膜？</div>
-							<div class="name-intro">做面膜补水啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~</div>
+							<div class="name-intro">做面膜补水啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~</div>
 						</div>
 					</div>
 					<div class="list-footer">
@@ -54,7 +70,7 @@
 								<span class="time right">2:02pm</span>
 							</div>
 							<div class="name">为什么要做面膜？</div>
-							<div class="name-intro">做面膜补水啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~</div>
+							<div class="name-intro">做面膜补水啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~</div>
 						</div>
 					</div>
 					<div class="list-footer">
@@ -72,7 +88,7 @@
 								<span class="time right">2:02pm</span>
 							</div>
 							<div class="name">为什么要做面膜？</div>
-							<div class="name-intro">做面膜补水啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~</div>
+							<div class="name-intro">做面膜补水啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~做</div>
 						</div>
 					</div>
 					<div class="list-footer">
@@ -90,7 +106,7 @@
 								<span class="time right">2:02pm</span>
 							</div>
 							<div class="name">为什么要做面膜？</div>
-							<div class="name-intro">做面膜补水啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~</div>
+							<div class="name-intro">做面膜补水啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~</div>
 						</div>
 					</div>
 					<div class="list-footer">
@@ -99,6 +115,155 @@
 						<a href="javascript:;" class="copy">复制链接</a>
 					</div>
 				</div>
+			</div>
+			<div class="list-wrapper">
+				<div class="list">
+					<div class="list-main clear">
+						<div class="img-view left"><img src="images/list-1.jpg" alt=""></div>
+						<div class="intro left">
+							<div class="intro-top clear">
+								<h3 class="left">布丁面膜</h3>
+								<span class="time right">2:02pm</span>
+							</div>
+							<div class="name">为什么要做面膜？</div>
+							<div class="name-intro">做面膜补水啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~</div>
+						</div>
+					</div>
+					<div class="list-footer">
+						<a href="javascript:;" class="delete">删除</a>
+						<a href="javascript:;" class="check">查看数据</a>
+						<a href="javascript:;" class="copy">复制链接</a>
+					</div>
+				</div>
+				<div class="list">
+					<div class="list-main clear">
+						<div class="img-view left"><img src="images/list-2.jpg" alt=""></div>
+						<div class="intro left">
+							<div class="intro-top clear">
+								<h3 class="left">布丁面膜</h3>
+								<span class="time right">2:02pm</span>
+							</div>
+							<div class="name">为什么要做面膜？</div>
+							<div class="name-intro">做面膜补水啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~做</div>
+						</div>
+					</div>
+					<div class="list-footer">
+						<a href="javascript:;" class="delete">删除</a>
+						<a href="javascript:;" class="check">查看数据</a>
+						<a href="javascript:;" class="copy">复制链接</a>
+					</div>
+				</div>
+				<div class="list">
+					<div class="list-main clear">
+						<div class="img-view left"><img src="images/list-3.jpg" alt=""></div>
+						<div class="intro left">
+							<div class="intro-top clear">
+								<h3 class="left">布丁面膜</h3>
+								<span class="time right">2:02pm</span>
+							</div>
+							<div class="name">为什么要做面膜？</div>
+							<div class="name-intro">做面膜补水啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~</div>
+						</div>
+					</div>
+					<div class="list-footer">
+						<a href="javascript:;" class="delete">删除</a>
+						<a href="javascript:;" class="check">查看数据</a>
+						<a href="javascript:;" class="copy">复制链接</a>
+					</div>
+				</div>
+				<div class="list">
+					<div class="list-main clear">
+						<div class="img-view left"><img src="images/list-4.jpg" alt=""></div>
+						<div class="intro left">
+							<div class="intro-top clear">
+								<h3 class="left">布丁面膜</h3>
+								<span class="time right">2:02pm</span>
+							</div>
+							<div class="name">为什么要做面膜？</div>
+							<div class="name-intro">做面膜补水啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~</div>
+						</div>
+					</div>
+					<div class="list-footer">
+						<a href="javascript:;" class="delete">删除</a>
+						<a href="javascript:;" class="check">查看数据</a>
+						<a href="javascript:;" class="copy">复制链接</a>
+					</div>
+				</div>
+			</div>
+			<div class="list-wrapper">
+				<div class="list">
+					<div class="list-main clear">
+						<div class="img-view left"><img src="images/list-3.jpg" alt=""></div>
+						<div class="intro left">
+							<div class="intro-top clear">
+								<h3 class="left">布丁面膜</h3>
+								<span class="time right">2:02pm</span>
+							</div>
+							<div class="name">为什么要做面膜？</div>
+							<div class="name-intro">做面膜补水啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~</div>
+						</div>
+					</div>
+					<div class="list-footer">
+						<a href="javascript:;" class="delete">删除</a>
+						<a href="javascript:;" class="check">查看数据</a>
+						<a href="javascript:;" class="copy">复制链接</a>
+					</div>
+				</div>
+				<div class="list">
+					<div class="list-main clear">
+						<div class="img-view left"><img src="images/list-4.jpg" alt=""></div>
+						<div class="intro left">
+							<div class="intro-top clear">
+								<h3 class="left">布丁面膜</h3>
+								<span class="time right">2:02pm</span>
+							</div>
+							<div class="name">为什么要做面膜？</div>
+							<div class="name-intro">做面膜补水啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~</div>
+						</div>
+					</div>
+					<div class="list-footer">
+						<a href="javascript:;" class="delete">删除</a>
+						<a href="javascript:;" class="check">查看数据</a>
+						<a href="javascript:;" class="copy">复制链接</a>
+					</div>
+				</div>
+				<div class="list">
+					<div class="list-main clear">
+						<div class="img-view left"><img src="images/list-2.jpg" alt=""></div>
+						<div class="intro left">
+							<div class="intro-top clear">
+								<h3 class="left">布丁面膜</h3>
+								<span class="time right">2:02pm</span>
+							</div>
+							<div class="name">为什么要做面膜？</div>
+							<div class="name-intro">做面膜补水啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~</div>
+						</div>
+					</div>
+					<div class="list-footer">
+						<a href="javascript:;" class="delete">删除</a>
+						<a href="javascript:;" class="check">查看数据</a>
+						<a href="javascript:;" class="copy">复制链接</a>
+					</div>
+				</div>
+				<div class="list">
+					<div class="list-main clear">
+						<div class="img-view left"><img src="images/list-1.jpg" alt=""></div>
+						<div class="intro left">
+							<div class="intro-top clear">
+								<h3 class="left">布丁面膜</h3>
+								<span class="time right">2:02pm</span>
+							</div>
+							<div class="name">为什么要做面膜？</div>
+							<div class="name-intro">做面膜补水啊防晒啊变美美哒啊~~做面膜补水啊美白啊防晒啊变美美哒啊~~</div>
+						</div>
+					</div>
+					<div class="list-footer">
+						<a href="javascript:;" class="delete">删除</a>
+						<a href="javascript:;" class="check">查看数据</a>
+						<a href="javascript:;" class="copy">复制链接</a>
+					</div>
+				</div>
+			</div>
 			</div>
 		</div>
 	</div>
